adding code to get gene symbols. This is working but the genes are not being used for creating viewpoints